notification popup and alignment fixes

--- a/public/css/front/app.css
+++ b/public/css/front/app.css
@@ -13930,7 +13930,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .section-padd.xs {
-  padding: 20px 0px;
+  padding: 40px 0px 30px 0px;
 }
 
 .text-notifer {
