--- a/resources/assets/sass/front/styles/custom.scss
+++ b/resources/assets/sass/front/styles/custom.scss
@@ -195,7 +195,7 @@ $section-padding-sm:20px 0px;
         padding: 57px 0px;
     }
     &.xs{
-        padding: 20px 0px;
+        padding: 40px 0px 30px 0px;
     }
 }
 
